NXP-7109: fix jar closer setup - fix url normalize